# Plugin-AngleBounded2DSimplification

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plugin.cc  plugin.hh  priority_queue.hh
