include(plugin)
option(GUROBI "Use Gurobi" ON)
if(GUROBI)
    add_compile_definitions(GUROBI)
    openflipper_plugin(TYPES POLYMESH TRIANGLEMESH DEPS Gurobi)
else()
    openflipper_plugin(TYPES POLYMESH TRIANGLEMESH)
endif()
set_source_files_properties(filename.c PROPERTIES LANGUAGE CXX)
add_definitions(-DTRILIBRARY -DANSI_DECLARATORS -DREAL=double -DVOID=int)
